[metadata]
# replace with your username:
name = mqttloghandler
version = 0.0.1
author = Jacob Bay Larsen
author_email = mail@jacobbay.dk
description = A MQTT Log handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jbl1108/mqttloghandler
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6